--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/Site.css
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/Site.css
@@ -76,7 +76,7 @@
     background-size: contain;
 }
 
-#layout a {
+#layout button {
     width: 50px;
     height: 50px;
     font-size: 24px;
@@ -84,10 +84,6 @@
     color: #ffffff;
     text-align: center;
     transition: 0.1s;
-}
-
-#layout a span {
-    vertical-align: middle;
 }
 
 #layout #nav-button {
@@ -99,7 +95,7 @@
     float: right;
 }
 
-#layout #logoutForm a {
+#layout #logoutForm button {
     float: right;
     background-color: transparent;
     border-left: 1px solid #0d5ec9;
