--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ContexteRealisation/_PartialList.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ContexteRealisation/_PartialList.cshtml
@@ -37,10 +37,10 @@
                 </td>
                 <td class="action-cell">
                     <a href='@Url.Action("MoveUp", new { idContexte = item.idContexte })'>
-                        <span class="glyphicon glyphicon glyphicon-arrow-up"><!----></span>
+                        <span class="glyphicon glyphicon-arrow-up"><!----></span>
                     </a>
                     <a href='@Url.Action("MoveDown", new { idContexte = item.idContexte })'>
-                        <span class="glyphicon glyphicon glyphicon-arrow-down"><!----></span>
+                        <span class="glyphicon glyphicon-arrow-down"><!----></span>
                     </a>
                 </td>
             </tr>
