--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/Site.css
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/Site.css
@@ -76,32 +76,37 @@
     background-size: contain;
 }
 
-#layout button {
-    width: 50px;
-    height: 50px;
-    font-size: 24px;
-    border: none;
-    color: #ffffff;
-    text-align: center;
-    transition: 0.1s;
-}
-
 #layout #nav-button {
     float: left;
     background-color: #0d5ec9;
+}
+
+#layout .layout-button {
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    color: #ffffff;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.1s;
+}
+
+#layout .layout-button span {
+    position: relative;
+    top: 10px;
 }
 
 #layout #logoutForm {
     float: right;
 }
 
-#layout #logoutForm button {
+#layout #logoutForm .layout-button {
     float: right;
     background-color: transparent;
     border-left: 1px solid #0d5ec9;
 }
 
-#layout #nav-button:hover, #layout #logoutForm button:hover {
+#layout #nav-button:hover, #layout #logoutForm .layout-button:hover {
     background-color: #0d5ec9;
 }
 
