--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
         <header>
             <div class="fluid-container">
                 <div id="layout-head" class="clearfix">
-                    <a id="nav-button" data-toggle="collapse" data-target="#nav"><span class="glyphicon glyphicon-th-large"></span></a>
+                    <div id="nav-button" data-toggle="collapse" data-target="#nav" class="layout-button"><span class="glyphicon glyphicon-th-large"></span></div>
                     <a href='@Url.Action("Index", "Accueil")'><div class="header-logo"><!----></div></a>
                     @Html.Partial("_LoginPartial")
                 </div>
