--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/Info.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = Model.EnteteProgramme.nom;
 }
 
-<div id="super-view">
+<div class="super-view">
     @Html.Action("_TreeView")
 
     <div id="info-display" class="container-fluid">
