--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/recherche.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/recherche.cshtml
@@ -9,7 +9,7 @@
     }
 </style>
 
-
+<!--touche pas a c'est 3 br la carl sa l'air inutile mais touche les juste pas bordel -->
     <div>
         <br />
         <br />
