--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/Pedagogie.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/Pedagogie.cshtml
@@ -22,7 +22,7 @@
             <p>Gestion des plans cadre</p>
         </a>
 
-        <a class="icon">
+        <a class="icon" href='@Url.Action("Index","GrilleCours")'>
             <span class="glyphicon glyphicon-th"></span>
             <p>Gestion des grilles de cours</p>
         </a>
